tests/warn/fence2.jo
def main =
  var x = 10
  (if 3 > 2 then 1 else 2)
  (x =                                  // error
     3 + 6)
